# 402-clearinghouse

./: .env.example  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SESSION_NOTES_2026-01-14.md  TRANSFORMER_ZKML_WRITEUP.md  admin_cli.py  demo.sh  docker-compose.yml  migrate_registry.py  monitor.py  negotiator.py  record_demo.sh  settle.sh  start.sh  status.sh  x402_client.py  x402_demo.sh  x402_live.py
agent/: Cargo.toml
agent/src/: main.rs
circuits/: Cargo.toml
circuits/identity/: Cargo.toml  merkle_tree.py
circuits/identity/program/: Cargo.toml
circuits/identity/program/src/: main.rs
circuits/identity/script/: Cargo.toml
circuits/identity/script/src/: main.rs
circuits/identity/src/: main.rs
circuits/src/: main.rs
config/: keys.example.js  secrets.example.json
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployClearinghouse402Multi.s.sol  DeployCreditLine.s.sol  DeployDEX.s.sol  DeployRegistry.s.sol  DeployTransformerGuardian.s.sol
contracts/src/: AIGuardian.sol  AgentCreditLine.sol  AgentRegistry.sol  AuthDataBuilder.sol  Clearinghouse402.sol  Clearinghouse402Multi.sol  ClearinghouseDEX.sol  MockSP1Verifier.sol  MockTBill.sol  MockUSDC.sol  MultiStableSettlement.sol
contracts/test/: InvariantScan.t.sol  SandwichSecurityTest.t.sol
docs/: api-keys.example.md  openapi.yaml
orchestrator/: .env.example  agent_controller.py  requirements.txt
production_deploy/: deploy_multistable.sh  deploy_sandwich.sh  migration_checklist.md  setup_gnosis_safe.md  testnet_results.md
scripts/: deploy-config.example.sh
sentinel/: README.md  install.sh  layer1_shield.py  layer1_shield_v2.py  layer2_mirage.py  layer3_ghost.py
server/: Cargo.toml
server/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs
server/src/services/: blockchain.rs  blockchain_alloy.rs  mod.rs
tests/: e2e_test.py
tests/fixtures/: test_wallets.js
x402_rwa/: README.md  pyproject.toml
x402_rwa/src/x402_rwa/: __init__.py  client.py  prover.py
zkml/: exp_table.json  generate_tables.py
zkml/program/: Cargo.toml
zkml/program/src/: attention.rs  exp_table.rs  lib.rs  main.rs  quantization.rs  softmax.rs  transformer.rs
zkml/script/: Cargo.toml
zkml/script/src/: main.rs
