[package]
name = "clearinghouse-agent"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Schell <ghost>"]
description = "Autonomous agent for x402 RWA acquisition"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
ethers = { version = "2", features = ["rustls"] }
alloy-primitives = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[[bin]]
name = "agent"
path = "src/main.rs"
