[package]
name = "compliance-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
# SP1 zkVM
sp1-zkvm = "2.0"

# Crypto primitives
sha2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
bincode = "1"

[features]
default = []

[[bin]]
name = "compliance"
path = "src/main.rs"
