[package]
name = "clearinghouse-server"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Schell <ghost>"]
description = "x402-compliant RWA clearinghouse server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum
alloy = { version = "0.1", features = ["full"] }
ethers = { version = "2", features = ["abigen", "rustls"] }

# Crypto
hex = "0.4"
sha2 = "0.10"

# Utils
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "server"
path = "src/main.rs"
