[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x402-rwa"
version = "0.1.0"
description = "Agent-Native RWA Settlement SDK - Acquire tokenized assets in one function call"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Schell", email = "ghost@x402.dev"}
]
keywords = ["x402", "rwa", "defi", "web3", "ai-agents", "treasury-bills", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.9"
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
    "eth-abi>=4.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Patrickschell609/402-clearinghouse"
Documentation = "https://github.com/Patrickschell609/402-clearinghouse#readme"
Repository = "https://github.com/Patrickschell609/402-clearinghouse"
Issues = "https://github.com/Patrickschell609/402-clearinghouse/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
