[package]
name = "decision-tree-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "5.2.4"
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
fixed = { version = "1.23", features = ["serde"] }
sha2 = "0.10"

[features]
default = []
